# f&f.yaml

# Add friends and Family to your list to be able to send SATS easily

appId: io.hexawallet.hexa.development
---
- runFlow: "login.yaml"
- tapOn: Freiend, tab, 2 of 4

#------------------------------------------------------------
# Create Invitation Link
#------------------------------------------------------------

- tapOn:
    id: "+AddNewContact"
- tapOn: Anna Haro
- tapOn: 
    id: "confirmAndProceedButton"
- tapOn:
    point: "45%,72%"

- tapOn:
    id: "secureWithContactsPhoneNumber"
- tapOn:
    point: "50%,27%"
- tapOn:
    point: "50%,47%"
- tapOn:
    point: "50%,67%"
- tapOn:
    point: "10%,90%"

- tapOn: 

#------------------------------------------------------------
#Create Invitation Link with gift
#------------------------------------------------------------

- tapOn: 
    id: "+AddNewContact"
- tapOn: David Taylor
- tapOn: 
    id: "confirmAndProceedButton"

- tapOn:
    point: "45%,85%"

- tapOn: Enter amount in sats
- tapOn: 1
- tapOn: 0
- tapOn: 0
- tapOn: 0
- tapOn:
    text: 0
    index: 0
- tapOn:
    id: "UseSatcardToGiftSats"
- tapOn: Create Gifts
- tapOn: 
- tapOn: 
