# friendsAndFamily.yaml

# Add friends and Family to your list to be able to send SATS easily

appId: io.hexawallet.hexa.development
---
- runFlow: "login.yaml"
- tapOn: Freiend, tab, 2 of 4
- tapOn:
    id: "+AddNewContact"
- tapOn: Anna Haro
- tapOn: Confirm & Proceed

- tapOn:
    point: "45%,72%"
- tapOn:
    point: 50%,76%

- tapOn: Close
- tapOn: 

- tapOn: + Add New
- tapOn: David Taylor
- tapOn: Confirm & Proceed

- tapOn:
    point: "45%,85%"

- tapOn: Enter amount in sats
- tapOn: "1"
- tapOn: "0"
- tapOn: "0"
- tapOn: "0"
- tapOn:
    text: "0"
    index: 0

- tapOn: Use SATSCARD™ to gift sats
- tapOn: Create Gifts
