#login.yaml

#Login Screen Flow

appId: io.hexawallet.hexa.development
---
- launchApp
- tapOn: "1"
- tapOn: "2"
- tapOn: "3"
- tapOn: "4"
- tapOn: 
    id: "ProceedButton"