# signup.yaml

# First time login

appId: io.hexawallet.hexa.development
---
- runFlow: "login.yaml"
- tapOn: Using Backup phrase 
- tapOn: Start with a new Tribe Wallet wallet 
- tapOn: Start with a new Tribe Wallet wallet 
- inputText: "TestWallet"
- tapOn: Proceed